# dice-and-code

./: LICENSE  README.md
.github/: CODEOWNERS
axi_modules/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  conanfile.py
axi_modules/include/axi_modules/: axi_extension.h  axi_injector.h  axi_loopback.h  tlm_memory_manager.h
axi_modules/src/: CMakeLists.txt  axi_injector.cpp  axi_loopback.cpp  main.cpp
axi_modules/test/: CMakeLists.txt  axi_injector_test.cpp  axi_loopback_test.cpp  systemc_fixture.cc  systemc_fixture.h
example_module/: .gitignore  CMakeLists.txt  README.md  conanfile.py
example_module/include/example_module/: example_module.h
example_module/src/: CMakeLists.txt  example_module.cpp
example_module/test/: CMakeLists.txt  example_module_test.cpp  run_tests.cc
external_dependancies/tlm2-gtestbench/: README.md
external_dependancies/tlm2-gtestbench/src/: run_tests.cc  systemc_fixture.cc
